public enum BattlePhaseType
{
	Setup = 0,
	Placement = 1,
	Idle = 2,
	PlayerTurn = 3,
	EnemyTurn = 4,
	Resolution = 5,
	End = 6
}
